--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Font Awesome -->t
-  <link rel="stylesheet" href="assests\css\all.css">
+  <link rel="stylesheet" href="assets\css\all.css">
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="assests\css\bootstrap.css">
+  <link rel="stylesheet" href="assets\css\bootstrap.css">
   <!-- Custom -->
-  <link rel="stylesheet" href="assests\css\style.css">
+  <link rel="stylesheet" href="assets\css\style.css">
 
   <title>Booplesnoot</title>
 </head>
@@ -53,7 +53,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assests\img\logo.png" class="logo" alt="">
+        <img src="assets\img\logo.png" class="logo" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
