adding account page

--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
       </div>
     </div>
   </nav>
-
-  <!-- Showcase -->
-  <section id="showcase">
     <div class="col-md-7">
       <div class="home-search p-5">
         <div class="overlay p-5">
@@ -102,16 +99,16 @@
               <!-- Form Row 1 -->
               <div class="form-row">
                 <div class="col-md-4 mb-3">
-                  <label class="sr-only">ingredient 1</label>
+                  <label class="sr-only">Ingredient 1</label>
                   <input type="text" name="ingredient 1" class="form-control" placeholder="ingredient 1">
                 </div>
 
                 <div class="col-md-4 mb-3">
-                  <label class="sr-only">ingredient 2</label>
+                  <label class="sr-only">Ingredient 2</label>
                   <input type="text" name="ingredient 2" class="form-control" placeholder="ingredient 2">
                 </div>
                 <div class="col-md-4 mb-3">
-                  <label class="sr-only">ingredient 3</label>
+                  <label class="sr-only">Ingredient 3</label>
                   <input type="text" name="ingredient 3" class="form-control" placeholder="ingredient 3">
                 </div>
               </div>
