--- a/booplesnoot-frontend/public/index.html
+++ b/booplesnoot-frontend/public/index.html
@@ -5,12 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="assets\css\all.css">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets\css\bootstrap.css">
-    <!-- Custom -->
-    <link rel="stylesheet" href="assets\css\style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" >
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
