Fixed search snippet on home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <i class="fas fa-phone"></i>(61) 111 222 333
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i>contact@something.com
+          <i class="fas fa-envelope-open"></i>contact@recipefinder.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
@@ -92,8 +92,7 @@
           <h1 class="display-4 mb-4">
             Search For A Perfect Recipe
           </h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
-            voluptatum tempore! Consectetur, id commodi!</p>
+          <p class="lead">Want to find the perfect recipe which uses the ingredients in your cupboard? Type in the ingredients that you have below to search for a delicious recipe!</p>
           <div class="search">
             <form action="search.html">
               <!-- Form Row 1 -->
